Fixed Card image alignment

--- a/css/templatemo-kind-heart-charity.css
+++ b/css/templatemo-kind-heart-charity.css
@@ -60,7 +60,6 @@ https://templatemo.com/tm-581-kind-heart-charity
   --yellow-color: #ffcc33;
   --blue-color: #343399;
 
-
   --body-font-family: "Metropolis", sans-serif;
 
   --h1-font-size: 52px;
@@ -219,9 +218,9 @@ strong {
 .custom-block-image {
   display: block;
   width: 100%;
-  height: 200px;
-  object-fit: cover;
-  margin-top: 35px;
+  height: 250px;
+  object-fit: fill;
+  margin-top: 10px;
 }
 
 .custom-block .custom-btn {
@@ -563,7 +562,7 @@ strong {
 }
 
 #hero-slide .carousel-item {
-  height: 680px;
+  height: 820px;
   min-height: 680px;
 }
 
